hphp/hack/test/full_fidelity/cases/concurrent/error/concurrent_return.php
<?hh

function f() {
  concurrent {
    $a = await f1();
    return await f2();
  }
}
